@@ -12,17 +12,7 @@
     <template name="cpp_preamble">
 	  #ifnotnull $precompiled_header
 	  @{
-		  @#ifdef WX_PRECOMP		#nl
-									#nl
-		  @#include &quot;$precompiled_header&quot; #nl
-									#nl
-		  @#ifdef __BORLANDC__      #nl
-			@#pragma hdrstop        #nl
-		  @#endif //__BORLANDC__    #nl
-									#nl
-		  @#else			        #nl
-		  @#include &lt;wx/wx.h&gt; #nl
-		  @#endif //WX_PRECOMP
+		  $precompiled_header
 	  @}
 	</template>
     <template name="cpp_epilogue">#ifnotequal $help_provider "none"
